test/syntax-errors/test-bloc1.sos
# Manque test apres while

i = 3 ;
j = 3 ;

while ${i} -eq ${j} do 
	i = 2 ;
	done

exit